--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
     <th>State</th>
     <th>2017 Estimate</th>
   </tr>
-  <tr></tr>
+  <tr>
+    <td>New York</td>
+    <td>New York</td>
+    <
+  </tr>
 </table>
 </body>
 </html>
