Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
     <td>Los Angeles</td>
     <td>California</td>
     <td>3,999,799</td>
-  <tr></tr>
+  <tr>
+    <td>Chicago</td>
+    <td>Illinois
+    <td></td>
+  </tr>
   </tr>
 </table>
 </body>
